preparing for remote webtesting

--- a/serenity.properties
+++ b/serenity.properties
@@ -3,7 +3,13 @@
 
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and Cucumber
-serenity.browser.maximized=true
+#serenity.browser.maximized=true
+
+webdriver.driver = provided
+webdriver.provided.type = mydriver
+webdriver.provided.mydriver = id.gosoft.test.CustomWebdriver
+thucydides.driver.capabilities = mydriver
+
 
 #serenity.batch.count=4
 #serenity.batch.number=1
